; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/mm/extr_srmmu.c_srmmu_pmd_populate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/mm/extr_srmmu.c_srmmu_pmd_populate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.page = type { i32 }

@PAGE_SHIFT = common dso_local global i32 0, align 4
@PTRS_PER_PTE = common dso_local global i32 0, align 4
@SRMMU_REAL_PTRS_PER_PTE = common dso_local global i32 0, align 4
@SRMMU_ET_PTD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, %struct.page*)* @srmmu_pmd_populate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @srmmu_pmd_populate(%struct.TYPE_3__* %0, %struct.page* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.page*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.page* %1, %struct.page** %4, align 8
  %7 = load %struct.page*, %struct.page** %4, align 8
  %8 = call i32 @page_to_pfn(%struct.page* %7)
  %9 = load i32, i32* @PAGE_SHIFT, align 4
  %10 = sub nsw i32 %9, 4
  %11 = shl i32 %8, %10
  %12 = sext i32 %11 to i64
  store i64 %12, i64* %5, align 8
  store i32 0, i32* %6, align 4
  br label %13

13:                                               ; preds = %36, %2
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @PTRS_PER_PTE, align 4
  %16 = load i32, i32* @SRMMU_REAL_PTRS_PER_PTE, align 4
  %17 = sdiv i32 %15, %16
  %18 = icmp slt i32 %14, %17
  br i1 %18, label %19, label %39

19:                                               ; preds = %13
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = load i32, i32* %6, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i64, i64* @SRMMU_ET_PTD, align 8
  %27 = load i64, i64* %5, align 8
  %28 = or i64 %26, %27
  %29 = call i32 @srmmu_set_pte(i32* %25, i64 %28)
  %30 = load i32, i32* @SRMMU_REAL_PTRS_PER_PTE, align 4
  %31 = sext i32 %30 to i64
  %32 = mul i64 %31, 4
  %33 = lshr i64 %32, 4
  %34 = load i64, i64* %5, align 8
  %35 = add i64 %34, %33
  store i64 %35, i64* %5, align 8
  br label %36

36:                                               ; preds = %19
  %37 = load i32, i32* %6, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %6, align 4
  br label %13

39:                                               ; preds = %13
  ret void
}

declare dso_local i32 @page_to_pfn(%struct.page*) #1

declare dso_local i32 @srmmu_set_pte(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
